return data, not id list, for annotations/

--- a/templates/resource.html
+++ b/templates/resource.html
@@ -7,7 +7,7 @@
     </style>
 {% endblock %}
 {% block content %}
-    <h1>resource {{data}}</h1>
+    <h1>resource</h1>
     <h2>data</h2>
     <ul>
 {% for key, value in data.iteritems() %}
