--- a/templates/collection.html
+++ b/templates/collection.html
@@ -7,8 +7,7 @@
     </style>
 {% endblock %}
 {% block content %}
-    <h1>collection</h1>
-    <h2>data</h2>
+    <h1>Collection</h1>
 {% for item in data %}
     <ul>
 {% for key, value in item.iteritems() %}
