--- a/templates/base.html
+++ b/templates/base.html
@@ -2,15 +2,61 @@
 <html lang="en">
   <head>
 {% block head %}
-    <link rel="stylesheet" href="/static/style.css" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/static/css/bootstrap.css">
+    <link rel="stylesheet" href="/static/css/bootstrap-theme.css">
+    <link rel="stylesheet" href="/static/css/main.css">
     <title>{% block title %}{% endblock %}</title>{% endblock %}
   </head>
   <body>
-    <div id="content">
+    <!-- nav -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">RESTful Open Annotation</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <form class="navbar-form navbar-right" role="form">
+            <div class="form-group">
+              <input type="text" placeholder="Email" class="form-control">
+            </div>
+            <div class="form-group">
+              <input type="password" placeholder="Password" class="form-control">
+            </div>
+            <button type="submit" class="btn btn-success">Sign in</button>
+          </form>
+        </div><!--/.navbar-collapse -->
+      </div>
+    </nav>
+
+    <!-- Main jumbotron for a primary marketing message or call to action -->
+<!--     <div class="jumbotron"> -->
+<!--       <div class="container"> -->
+<!--         <h1>RESTful OA server</h1> -->
+<!--         <p>BLAH 2015</p> -->
+<!--         <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p> -->
+<!--       </div> -->
+<!--     </div> -->
+
+    <div class="container">
+      <div id="content">
 {% block content %}{% endblock %}
-    </div>
-    <div id="footer">
+      </div>
+      <div id="footer">
 {% block footer %}{% endblock %}
-    </div>
+      </div>
+      <hr>
+      <footer>
+        <p style="float:right; color:gray">BLAH 2015</p>
+      </footer>
+    </div> <!-- /container -->
   </body>
 </html>
